--- a/anniversary_half/index.html
+++ b/anniversary_half/index.html
@@ -80,7 +80,7 @@
       id="iframMusic"
       allow="autoplay"
       style="display: none"
-      src="mp3/xinnian.mp3"
+      src="mp3/xinniddan.mp3"
     ></iframe>
     <script src="jquery.min.js"></script>
     <script src="fire.js"></script>
