--- a/anniversary_half/index.html
+++ b/anniversary_half/index.html
@@ -76,12 +76,12 @@
     <!-- <audio autoplay loop id="music">
       <source src="mp3/xinnian.mp3" />
     </audio> -->
-    <iframe
+    <!-- <iframe
       id="iframMusic"
       allow="autoplay"
       style="display: none"
       src="mp3/xinniddan.mp3"
-    ></iframe>
+    ></iframe> -->
     <script src="jquery.min.js"></script>
     <script src="fire.js"></script>
     <script src="talk.js"></script>
