feat: anniversary work

--- a/anniversary_half/index.html
+++ b/anniversary_half/index.html
@@ -66,7 +66,8 @@
       <div class="shape">牵着手，抵着肩</div>
       <div class="shape">度过了好多好多开心的时光</div>
       <div class="shape">我陪着你，你陪着我</div>
-      <!-- <div class="shape">照顾彼此，呵护对方</div> -->
+      <div class="shape">一起哈哈笑，一起呜呜哭</div>
+      <div class="shape">呵护彼此</div>
       <div class="shape">永远永远地走下去</div>
       <div class="shape"><img src="img/1_326x434.jpg"/></div>
       <div class="shape">半周年快乐，半周年幸福</div>
